--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.3.1",
     "react-native": "0.32.0",
-    "react-native-button": "^1.7.0"
+    "react-native-button": "^1.7.0",
+    "react-native-facebook-login": "^1.3.0"
   }
 }
