--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "15.3.1",
     "react-native": "0.32.0",
     "react-native-button": "^1.7.0",
-    "react-native-facebook-login": "^1.3.0"
+    "react-native-facebook-login": "^1.3.0",
+    "react-native-vector-icons": "^2.1.0"
   }
 }
