--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "android": "react-native run-android"
+    "android": "react-native run-android",
+    "es-lint": "./node_modules/.bin/eslint . -c .eslintrc"
   },
   "dependencies": {
     "react": "15.3.1",
@@ -12,5 +13,10 @@
     "react-native-button": "^1.7.0",
     "react-native-facebook-login": "^1.3.0",
     "react-native-vector-icons": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.4.0",
+    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-react-native": "^2.0.0"
   }
 }
