--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-native": "0.32.0",
     "react-native-button": "^1.7.0",
     "react-native-facebook-login": "^1.3.0",
-    "react-native-vector-icons": "^2.1.0"
+    "react-native-router-flux": "^3.35.0",
+    "react-native-vector-icons": "^2.1.0",
+    "react-timer-mixin": "^0.13.3"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
