--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "es-lint": "./node_modules/.bin/eslint . -c .eslintrc"
   },
   "dependencies": {
+    "nuclide": "^0.166.0",
     "react": "15.3.1",
     "react-native": "0.32.0",
     "react-native-button": "^1.7.0",
