--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,11 @@ xcuserdata
 DerivedData
 *.xcuserstate
 
-android/.gradle/2.4/taskArtifacts
+android/.gradle/2.4/taskArtifacts*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
