add command for build and release android apk

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "android": "react-native run-android",
+    "android-release": "react-native run-android --variant=release",
+    "build-android": "cd android && ./gradlew assembleRelease && cd ..",
     "es-lint": "./node_modules/.bin/eslint . -c .eslintrc"
   },
   "dependencies": {
