--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "es-lint": "./node_modules/.bin/eslint . -c .eslintrc"
   },
   "dependencies": {
+    "promise": "^7.1.1",
     "react": "15.3.1",
     "react-native": "0.32.0",
     "react-native-facebook-login": "^1.3.0",
