--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "android": "react-native run-android",
     "android-release": "react-native run-android --variant=release",
+    "android-log": "react-native log-android",
     "build-android": "cd android && ./gradlew assembleRelease && cd ..",
     "ios": "react-native run-ios",
     "es-lint": "./node_modules/.bin/eslint . -c .eslintrc"
