--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "promise": "^7.1.1",
     "react": "15.3.1",
     "react-native": "0.32.0",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-facebook-login": "^1.3.0",
     "react-native-router-flux": "^3.35.0",
     "react-native-vector-icons": "^2.1.0",
