--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "android": "react-native run-android",
-    "android-release": "react-native run-android --variant=release",
+    "adb-remove-app": "adb shell pm uninstall -k com.ideastudio 2> null | exit 0",
+    "android": "npm run adb-remove-app && react-native run-android",
+    "android-release": "npm run adb-remove-app && react-native run-android --variant=release",
     "android-log": "react-native log-android",
     "build-android": "cd android && ./gradlew assembleRelease && cd ..",
     "ios": "react-native run-ios",
