--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "adb-remove-app": "adb shell pm uninstall -k com.ideastudio 2> null | exit 0",
+    "adb-remove-app": "adb shell pm uninstall com.ideastudio | exit 0",
     "android": "npm run adb-remove-app && react-native run-android",
     "android-release": "npm run adb-remove-app && react-native run-android --variant=release",
     "android-log": "react-native log-android",
@@ -17,6 +17,7 @@
     "react": "15.3.1",
     "react-native": "0.32.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-circular-progress": "0.0.7",
     "react-native-facebook-login": "^1.3.0",
     "react-native-router-flux": "^3.35.0",
     "react-native-vector-icons": "^2.1.0",
