--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-circular-progress": "0.0.7",
     "react-native-facebook-login": "^1.3.0",
+    "react-native-loading-spinner-overlay": "^0.3.0",
     "react-native-router-flux": "^3.35.0",
     "react-native-vector-icons": "^2.1.0",
     "react-timer-mixin": "^0.13.3"
