--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "react-native": "0.34.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-circular-progress": "0.0.7",
+    "react-native-drawer": "^2.3.0",
     "react-native-facebook-login": "^1.3.0",
     "react-native-loading-spinner-overlay": "^0.3.0",
     "react-native-router-flux": "^3.35.0",
     "react-native-selectme": "^1.2.0",
     "react-native-simple-toast": "0.0.5",
     "react-native-vector-icons": "^2.1.0",
-    "react-timer-mixin": "^0.13.3",
-    "undefined": "^0.1.0"
+    "react-timer-mixin": "^0.13.3"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
