--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,7 +93,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.ideastudio"
+        applicationId "com.eloyt"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
