--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-router-flux": "^3.37.0",
     "react-native-simple-toast": "0.0.5",
     "react-native-vector-icons": "^3.0.0",
-    "react-timer-mixin": "^0.13.3"
+    "react-timer-mixin": "^0.13.3",
+    "yarn": "^0.17.10"
   },
   "devDependencies": {
     "eslint": "^3.11.1",
