--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-facebook-login": "^1.4.0",
     "react-native-fs": "^2.0.1-rc.2",
     "react-native-loading-spinner-overlay": "^0.4.1",
+    "react-native-progress": "^3.2.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-simple-toast": "0.0.5",
     "react-native-vector-icons": "^3.0.0",
