--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-progress": "^3.2.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-simple-toast": "0.0.5",
+    "react-native-swipe-cards": "0.0.9",
     "react-native-vector-icons": "^3.0.0",
     "react-timer-mixin": "^0.13.3",
     "yarn": "^0.17.10"
