--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-video')
     compile project(':react-native-fs')
     compile project(':react-native-camera')
     compile project(':react-native-vector-icons')
