--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-simple-toast": "0.0.5",
     "react-native-swipe-cards": "0.0.9",
     "react-native-vector-icons": "^3.0.0",
+    "react-native-video": "^0.9.0",
     "react-timer-mixin": "^0.13.3",
     "yarn": "^0.17.10"
   },
